--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "imgur",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+  "node":"10.8.0",
+  "npm":"6.13.7"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
